--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,30 @@
-.App {
+.input-list {
+  columns: 2;
+  -webkit-columns: 2;
+  -moz-columns: 2;
+}
+
+.user-input {
+
+}
+
+.quiz-image {
+  grid-column: 2;
+}
+
+.quiz-container {
+  display: grid
+}
+
+.header {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
+.answerButton {
+  margin-left: 20px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #09d3ac;
+.subjectButton {
+  margin-left: 5px;
+  margin-right: 5px;
 }
